tests/res/traits/error_req_member_unsatisfied.say
// An unsatisfied `req <member>` at an instantiable type is a compile error.
trait Counter {
    req count;
    pub fn inc() { this.count = this.count + 1; }
}
type Widget with Counter { init() {} } // error: Unsatisfied `req count`: needs an `inner`/`pub` member 'count'
